Update create disbursement form

--- a/src/app/components/date-range/date-range.component.html
+++ b/src/app/components/date-range/date-range.component.html
@@ -1,1 +1,17 @@
-<p>date-range works!</p>
+<!-- <div style="display: flex;">
+<input nbInput placeholder="Pick Date" [nbDatepicker]="dateTimePicker" style="display: flex; flex: auto;">
+<nb-datepicker #dateTimePicker></nb-datepicker>
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <div class="input-group-append">
+      <button class="btn btn-outline-secondary" type="button">Button</button>
+    </div>
+</div>
+<input nbInput placeholder="Pick Date" [nbDatepicker]="endDate" style="display: flex; flex: auto;">
+<nb-datepicker #endDate></nb-datepicker>
+</div> -->
+<div style="display: flex;">
+    <ngx-date></ngx-date>
+    <div style="margin-left: 20px; margin-right: 20px; font-size: 20px; text-align: center; justify-content: center; display: flex;">-</div>
+    <ngx-date></ngx-date>
+</div>
