--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -287,6 +287,17 @@ letter-spacing: 0px;
 color: #130019;
 opacity: 1;
 }
+.a-normal{
+  font-family:'Rubik',sans-serif !important;
+font-style: normal !important;
+font-weight: normal !important;
+font-size: 16px !important;
+line-height: 128% !important;
+
+text-decoration-line: none !important;
+
+color: #4847E0 !important;
+}
 button{
   text-transform: none !important;
   min-width: 144px !important;
