--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
       <nb-card>
         <div style="padding: 10px;display: flex; flex-direction: row;">
        <div style="display: flex;align-items: center;">
-         <img src="assets/icons/department.jpg" style="width:3rem;">
+         <img src="assets/icons/ActiveTraining.png" style="width:3rem;">
        </div>
        <div style="flex-direction: column; padding-left: 10px;">
         <div style="padding:5px">
@@ -41,7 +41,7 @@
       <nb-card>
         <div style="padding: 10px;display: flex; flex-direction: row;">
        <div style="display: flex;align-items: center;">
-         <img src="assets/icons/department.jpg" style="width:3rem;">
+         <img src="assets/icons/vendors.png" style="width:3rem;">
        </div>
        <div style="flex-direction: column; padding-left: 10px;">
         <div style="padding:5px">
@@ -60,7 +60,7 @@
       <nb-card>
         <div style="padding: 10px;display: flex; flex-direction: row;">
        <div style="display: flex;align-items: center;">
-         <img src="assets/icons/department.jpg" style="width:3rem;">
+         <img src="assets/icons/trainingbudget.png" style="width:3rem;">
        </div>
        <div style="flex-direction: column; padding-left: 10px;">
         <div style="padding:5px">
@@ -84,7 +84,7 @@
             <nb-card-body>
         <div style="display: flex;flex-direction: row;">
 <div style="flex:auto">
-<span class="header6-bold">Distribution by Location</span>
+<span class="header6-bold">Distribution by Gender</span>
 </div>
 <div>
   <nb-select selected="1">
@@ -177,9 +177,65 @@
     <div class="col-xxxl-6 col-md-6" >
         <nb-card>         
             <nb-card-body>
-               
+              <div style="display: flex;flex-direction: row;">
+                <div style="flex:auto">
+                <span class="header6-bold">Upcoming Events</span>
+                </div>
+                <div>
+              <span class="a-normal" style="cursor: pointer;">View all</span>
+                </div>
+                        </div>
+                        <div style="height: 19.8rem;width: 100%;padding: 5px;">
+                        <div class="card-body d-flex mt-2" style="display: flex; flex-direction: column;">
+                          <div style="display: flex; justify-content: space-between;">
+                              <div class="mt-2" *ngFor="let day_no of [0,1,2,3,4]">
+                                  <div class="pl-2 pr-2 pt-1 rounded-circle  text-dark"
+                                      [class]="{'circle': weekdays[day_no].getDay() == today.getDay()}"
+                                      style="padding: 2px;">
+                                      <h6 style="font-size: xx-small;">{{weekdays[day_no] | date:"MMM"}}</h6>
+                                      <span style="font-size: smaller;">{{weekdays[day_no] | date:"dd"}}</span>
+                                  </div>
+  
+                                  <h6 style="font-weight: lighter; font-style: normal; font-size: 12px;"
+                                      class="mt-3 pl-1">
+                                      {{days_of_week[day_no]}}</h6>
+                              </div>
+                          </div>
+                     
+                          <div class="zee">
+                              <div class="card-body" *ngFor="let i of [0,1,2,3,4,5,6,7,8]">
+                                  <h4 class="card-title" style="font-size: small;">Workshop</h4>
+                                  <p class="card-text" style="color: #F2994A;">Managing employeed</p>
+                                  <p class="card-text">11am - 12pm</p>
+  
+  
+                              </div>
+                          </div>
+                      </div>
+                        </div>
             </nb-card-body>
           </nb-card>
     </div>
 
   </div>
+
+  <div class="row">
+    <div class="col-xxxl-12 col-md-12" >
+      <nb-card>         
+        <nb-card-body>
+          <div style="display: flex;flex-direction: row;">
+            <div style="flex:auto">
+            <span class="header6-bold">Employee Retention Graph</span>
+            </div>
+            <div>
+              <nb-select selected="1">
+                <nb-option value="1">Past 10 years</nb-option>
+                <nb-option value="2">Option 2</nb-option>
+              </nb-select>
+            </div>
+                    </div>
+          </nb-card-body>
+      </nb-card>
+  
+      </div>
+      </div>
