--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -298,11 +298,45 @@ text-decoration-line: none !important;
 
 color: #4847E0 !important;
 }
+
+.a-small-normal{
+  font-family:'Rubik',sans-serif !important;
+font-style: normal !important;
+font-weight: normal !important;
+font-size: 12px !important;
+line-height: 22px !important;
+
+text-decoration-line: none !important;
+
+color: #4847E0 !important;
+}
+
 button{
   text-transform: none !important;
   min-width: 144px !important;
 }
+.cbadge{
+  color:#4847E0;
+  padding: 6px 12px 6px 12px;
+  min-height: 30px;
+  min-width: 33px;
+  background: rgba(72, 71, 224, 0.08);
+  border-radius: 8px;
+}
 
+.circular-avatar {
+  position: relative;
+  width: 4rem;
+  height: 4rem;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 0.5px solid #4847E0;
+}
+
+.circular-avatar img {
+  width: 100%;
+  height: 100%;
+}
 @media screen and (max-width: 992px) {
   .linear-form .form-group {
     flex-direction: column;
