--- a/src/app/modules/training/administration/administration.component.html
+++ b/src/app/modules/training/administration/administration.component.html
@@ -1,10 +1,13 @@
-<ngx-componentsheader actions="actions" [pageName]="pagetitle"></ngx-componentsheader>
+<ngx-componentsheader actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newVendor', label:'New Vendor', icon: 'plus'}]"></ngx-componentsheader>
 <div style="padding: 10px;"></div>
 
-<div class="container" style="background-color: #ffffff; height: 1000px;">
+<ngx-componentsheader  actions="actions" [pageName]="pagetitle" [requiredButton]="[{name:'newType', label:'New Training Type', icon: 'plus'}]"></ngx-componentsheader>
+<div style="padding: 10px;"></div>
+
+<div class="container" style="background-color: #ffffff; height: auto;">
   <nb-tabset>
     <nb-tab tabTitle="Vendors">
-    <div *ngIf="welcome && TrainingVendorData ==''" id="home" class="container tab-pane active"><br>
+    <div *ngIf="welcome && TrainingVendorData ==''" id="home" class="container tab-pane"><br>
       <div class="center">
         <h5 style="text-align: center;">You have not setup any training vendor</h5>
         <p style="text-align: center;">Click on the button to start your setup</p>
@@ -90,7 +93,7 @@
 
             <!-- Upload Vendor with Excel -->
 
-    <div *ngIf="vendorWindow" class="container" style="background-color: white; height: 800px;">
+    <div *ngIf="vendorWindow" class="container" style="background-color: white; height: auto;">
       <div style="padding: 20px 0px 5px 0px;">
         <span style="font-size: 15px; font-weight: bold;">Upload Vendor List</span>
       </div>
@@ -120,12 +123,15 @@
         </form>
 
       </div>
+    </nb-tab>
 
 <!-- Training Types -->
 
-    </nb-tab>
+
+
+
     <nb-tab tabTitle="Types">
-      <div *ngIf="trainingType && TrainingTypeData==''" id="home" class="container tab-pane active"><br>
+      <div *ngIf="trainingType && TrainingTypeData==''" id="home" class="container tab-pane active" style="background-color: white; height: auto;"><br>
         <div class="center">
           <h5 style="text-align: center;">You have not setup any training type</h5>
           <p style="text-align: center;">Click on the button to start your set up</p>
