--- a/src/app/components/my-menu/menu-item.html
+++ b/src/app/components/my-menu/menu-item.html
@@ -1,6 +1,7 @@
 <span *ngIf="menuItem.group">
-    <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon>
-    {{ menuItem.title }}
+    <!-- <nb-icon  [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon> -->
+    <img [config]="menuItem.icon" [src]="menuItem.icon" *ngIf="menuItem.icon" style="width: 1.2rem;">
+    <span class="menu-title" style="padding-left: 15px;" >{{ menuItem.title }} </span>
   </span>
   <a *ngIf="menuItem.link && !menuItem.url && !menuItem.children && !menuItem.group"
      [routerLink]="menuItem.link"
@@ -14,8 +15,9 @@
      [class.active]="menuItem.selected"
      (mouseenter)="onHoverItem(menuItem)"
      (click)="onItemClick(menuItem);">
-    <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon>
-    <span class="menu-title">{{ menuItem.title }}</span>
+    <!-- <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon> -->
+    <img [config]="menuItem.icon" [src]="menuItem.icon" *ngIf="menuItem.icon" style="width: 1.2rem;">
+    <span class="menu-title" style="padding-left: 15px;" >{{ menuItem.title }} </span>
     <ng-container *ngIf="badge" [ngTemplateOutlet]="badgeTemplate"></ng-container>
   </a>
   <a *ngIf="menuItem.url && !menuItem.children && !menuItem.link && !menuItem.group"
@@ -25,8 +27,9 @@
      [class.active]="menuItem.selected"
      (mouseenter)="onHoverItem(menuItem)"
      (click)="onSelectItem(menuItem)">
-    <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon>
-    <span class="menu-title">{{ menuItem.title }}</span>
+    <!-- <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon> -->
+    <img [config]="menuItem.icon" [src]="menuItem.icon" *ngIf="menuItem.icon" style="width: 1.2rem;">
+    <span class="menu-title" style="padding-left: 15px;" >{{ menuItem.title }}</span>
     <ng-container *ngIf="badge" [ngTemplateOutlet]="badgeTemplate"></ng-container>
   </a>
   <a *ngIf="!menuItem.children && !menuItem.link && !menuItem.url && !menuItem.group"
@@ -35,8 +38,10 @@
      [class.active]="menuItem.selected"
      (mouseenter)="onHoverItem(menuItem)"
      (click)="$event.preventDefault(); onItemClick(menuItem);">
-    <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon>
-    <span class="menu-title">{{ menuItem.title }}</span>
+
+     <img [config]="menuItem.icon" [src]="menuItem.icon" *ngIf="menuItem.icon" style="width: 1.2rem;">
+    <!-- <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon> -->
+    <span class="menu-title"  style="padding-left: 15px;">{{ menuItem.title }}</span>
     <ng-container *ngIf="badge" [ngTemplateOutlet]="badgeTemplate"></ng-container>
   </a>
   <a *ngIf="menuItem.children"
@@ -46,8 +51,9 @@
      [class.active]="menuItem.selected"
      (mouseenter)="onHoverItem(menuItem)"
      href="#">
-    <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon>
-    <span class="menu-title">{{ menuItem.title }}</span>
+     <img [config]="menuItem.icon" [src]="menuItem.icon" *ngIf="menuItem.icon" style="width: 1.2rem;">
+    <!-- <nb-icon class="menu-icon" [config]="menuItem.icon" *ngIf="menuItem.icon"></nb-icon> -->
+    <span class="menu-title" style="padding-left: 15px;">{{ menuItem.title }}</span>
     <ng-container *ngIf="badge" [ngTemplateOutlet]="badgeTemplate"></ng-container>
     <nb-icon class="expand-state" [icon]="getExpandStateIcon()" pack="nebular-essentials"></nb-icon>
   </a>
