--- a/src/app/components/my-menu/my-menu.component.html
+++ b/src/app/components/my-menu/my-menu.component.html
@@ -1,6 +1,6 @@
 <ul class="menu-items">
     <ng-container *ngFor="let item of items">
-      <li nbMenuItemy *ngIf="!item.hidden"
+      <li nbMenuItem *ngIf="!item.hidden"
           [menuItem]="item"
           [badge]="item.badge"
           [class.menu-group]="item.group"
