--- a/src/app/components/my-menu/my-menu.component.scss
+++ b/src/app/components/my-menu/my-menu.component.scss
@@ -1,2 +1,3 @@
 // @import '../../../..//@nebular/theme/components/menu/menu.component.css'
-@import '../../../../node_modules/@nebular/theme/components/menu/menu.component.css'
+@import '../../../../node_modules/@nebular/theme/components/menu/menu.component.css';
+
