--- a/src/app/modules/training/requests/requests.component.html
+++ b/src/app/modules/training/requests/requests.component.html
@@ -1,3 +1,5 @@
+<ngx-componentsheader [pageName]="pageTitle"></ngx-componentsheader>
+
 <div class="container" style="background-color: #ffffff; height: 1000px;"> <!-- <ngx-default-content></ngx-default-content> -->
 <div *ngIf="welcome && requestData ==''" id="home" class="container tab-pane active"><br>
 
