--- a/src/app/modules/leave/leavehistory/leavehistory.component.html
+++ b/src/app/modules/leave/leavehistory/leavehistory.component.html
@@ -1,24 +1,12 @@
-<ngx-componentsheader pageName='Leave Plan' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
+<ngx-componentsheader pageName='LeaveHistory' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 
 </ngx-componentsheader>
 
-
-
-<nb-tabset>
-    <nb-tab tabTitle="Approved"></nb-tab>
-    <nb-tab tabTitle="Pending"></nb-tab>
-    <nb-tab tabTitle="Rejected"></nb-tab>
-</nb-tabset>
-kklkk
-<ngx-calender></ngx-calender>
-nnnn
 <ngx-tableheader></ngx-tableheader>
 <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
 
-<select [(ngModel)]="selectedOption">
-    <option value="1">First Name</option>
-    <option value="2">Last Name</option>
-</select>
+
+
 
 <ngx-side-modal [(show)]='showAddPlanModal' style="width: 500px;">
     <div modal-header>Apply For Leave</div>
@@ -109,9 +97,7 @@ nnnn
                 <textarea class="form-control" placeholder="Enter Comment" id="Comment">Comment</textarea>
             </div>
 
-
-
-            <div class="d-flex-column">
+   <div class="d-flex-column">
                 <nb-checkbox (checkedChange)="toggle($event)">
                     <span>Allow rollover</span>
                 </nb-checkbox>
@@ -119,8 +105,9 @@ nnnn
             </div>
 
 
-            <!--<label>Checked:</label> {{ checked }}-->
-
+          <!--<label>Checked:</label> //{{ checked }}
+-->  
+          
 
         </form>
     </div>
