--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -276,6 +276,17 @@ letter-spacing: 0px;
 color: #080730 !important;
 opacity: 1;
 }
+.listsubheader-2{
+  font-style: normal !important;
+font-variant:normal !important;
+font-weight: normal !important;
+font-size: 18px !important;
+line-height: 24px !important;
+font-family: 'Rubik',sans-serif !important;
+letter-spacing: 0px;
+color: #080730 !important;
+opacity: 1;
+}
 .smalltext{
   font-style: normal !important;
   font-variant:normal !important;
