Recruitment Module - Applicants and Interviewers dashboard

--- a/src/app/modules/recruitment/job-details/job-details.component.scss
+++ b/src/app/modules/recruitment/job-details/job-details.component.scss
@@ -59,6 +59,13 @@ p {
   border-radius: 4px;
 }
 
+li {
+  color: #95A8B8, 100%;
+  font-size: 12px;
+  text-justify: distribute;
+  font-weight: 400;
+}
+
 // .job-title {
 //   position: static;
 // width: 417px;
