--- a/src/app/modules/training/plans/plans.component.html
+++ b/src/app/modules/training/plans/plans.component.html
@@ -23,7 +23,7 @@
            </nb-tabset>
         </div>
         <ngx-tableheader></ngx-tableheader>
-        <ngx-tablecomponent></ngx-tablecomponent>
+        <ngx-tablecomponent [tableColum]="myTable"></ngx-tablecomponent>
 
       </div>
 
