--- a/src/app/modules/recruitment/job-details/job-details.component.html
+++ b/src/app/modules/recruitment/job-details/job-details.component.html
@@ -1,21 +1,23 @@
 
-<div class="bg" style="background-color: #ffffff;">
+<div style="background-color: transparent;">
   <div class="header"></div>
 
-  <div class="row" style=" display: flexbox; margin: 0px 12%; position: absolute; padding: 30px; top: 20%; background-color: #ffffff;">
+  <div class="row" style=" display: flexbox; margin: 0px 12%; position: absolute; padding: 50px; top: 20%; background-color: #ffffff;">
   <div class="container-fluid">
     <div class="row">
     <div class="col-8">
       <span class="title">Human Resource Manager</span>
+      <div style="padding: 10px;"></div>
       <div class="sub-title">
         <span class="fa fa-map-marker-alt icon"><span style="margin: 5px; font-size: 16px;">Lagos</span></span>
         <span style="padding: 10px;"></span>
         <span class="fa fa-calendar icon"><span style="margin: 5px; font-size: 16px;">Full Time</span></span>
       </div>
-      <div style="padding: 30px;"></div>
+      <div style="padding: 20px;"></div>
 
       <div class="about-company">
         <span class="sub-title">About Smartace</span>
+        <div style="padding: 10px;"></div>
         <p>
           We are a company bringing together the best resources, tools,
           advisories, training, and information in the simplest possible
@@ -27,6 +29,7 @@
       </div>
       <div class="job-description">
           <span class="sub-title">Job Description</span>
+          <div style="padding: 10px;"></div>
           <p>
             We are a company bringing together the best resources, tools,
             advisories, training, and information in the simplest possible
@@ -39,7 +42,8 @@
 
       <div class="your-responsibility">
         <span class="sub-title">Your Responsibilities</span>
-        <ul>
+        <!-- <div style="padding: 10px;"></div> -->
+        <ul style="padding: 20px; color: 95A8B8, 100%;">
           <li>We are a company bringing together the best resources, tools,</li>
           <li>We are a company bringing together the best resources, tools,</li>
           <li>We are a company bringing together the best resources, tools,</li>
@@ -48,52 +52,53 @@
 
       <div class="what-we-offer">
         <span class="sub-title">Your Responsibilities</span>
-        <ul>
+        <ul style="padding: 20px;">
           <li>Competitive renumeration</li>
           <li>Health allowance</li>
           <li>Paid Leave</li>
         </ul>
       </div>
 <hr>
-
-<form>
+<div style="padding: 10px;"></div>
+<span class="sub-title" style="padding: 20px 0px;">Apply Now</span>
+<form style="font-family: Rubik;">
   <div class="form-group row mydiv">
-    <label for="vendorName" class="col-sm-3 col-form-label mylabel">Vendor Name</label>
-    <div class="col-sm-4">
+    <label for="vendorName" class="col-sm-4 col-form-label mylabel">Vendor Name</label>
+    <div class="col-sm-6 col-lg-6">
       <input type="text" class="form-control" id="vendorName" placeholder="Vendor Name">
     </div>
   </div>
   <div class="form-group row mydiv">
-    <label for="contactPerson" class="col-sm-3 col-form-label mylabel">Primary Contact Person</label>
-    <div class="col-sm-4">
+    <label for="contactPerson" class="col-sm-4 col-form-label mylabel">Primary Contact Person</label>
+    <div class="col-sm-6 col-lg-6">
       <input type="text" class="form-control" id="contactPerson" placeholder="Primary Contact Person">
     </div>
   </div>
 
   <div class="form-group row mydiv">
-    <label for="phone" class="col-sm-3 col-form-label mylabel">Phone</label>
-    <div class="col-sm-4">
+    <label for="phone" class="col-sm-4 col-form-label mylabel">Phone</label>
+    <div class="col-sm-6 col-lg-6">
       <input type="tel" class="form-control" id="phone" placeholder="Phone">
     </div>
   </div>
 
   <div class="form-group row mydiv">
-    <label for="email" class="col-sm-3 col-form-label mylabel">Email</label>
-    <div class="col-sm-4">
+    <label for="email" class="col-sm-4 col-form-label mylabel">Email</label>
+    <div class="col-sm-6 col-lg-6">
       <input type="email" class="form-control" id="email" placeholder="Email">
     </div>
   </div>
 
   <div class="form-group row mydiv">
-    <label for="website" class="col-sm-3 col-form-label mylabel">Website</label>
-    <div class="col-sm-4">
+    <label for="website" class="col-sm-4 col-form-label mylabel">Website</label>
+    <div class="col-sm-6 col-lg-6">
       <input type="url" class="form-control" id="website" placeholder="Website">
     </div>
   </div>
 
   <div class="form-group row mydiv">
-    <label for="specialization" class="col-sm-3 col-form-label mylabel">Specialization</label>
-    <div class="col-sm-4">
+    <label for="specialization" class="col-sm-4 col-form-label mylabel">Specialization</label>
+    <div class="col-sm-6 col-lg-6">
         <select class="custom-select" required>
           <option value="">Select </option>
           <option value="1">One</option>
@@ -104,8 +109,8 @@
   </div>
 
   <div class="form-group row">
-    <label for="specialization" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
-    <div class="col-sm-4">
+    <label for="specialization" class="col-sm-4 col-form-label" style="font-weight: bold;"></label>
+    <div class="col-sm-6 col-lg-6">
       <button type="submit" class="btn my-button" style="padding: 5px 20px;">Submit Application</button>
       <br>
 
@@ -117,6 +122,13 @@
     <div class="col-4">
       <div class="job-details">
         <button type="button" class="btn my-button">Apply Now</button>
+      </div>
+      <div class="socials">
+        <div style="padding: 20px;"></div>
+          <i class="fas fa-share-alt"></i><span style="padding-right: 10px;"></span>
+          <i class="fab fa-linkedin-in"></i><span style="padding-right: 10px;"></span>
+          <i class="fab fa-twitter"></i><span style="padding-right: 10px;"></span>
+          <i class="fas fa-link"></i>
       </div>
       <div class="socials">
 
