--- a/src/app/modules/training/requests/requests.component.html
+++ b/src/app/modules/training/requests/requests.component.html
@@ -1,4 +1,4 @@
-<ngx-componentsheader actions="actions" [pageName]="pageTitle"></ngx-componentsheader>
+<ngx-componentsheader [pageName]="pageTitle"></ngx-componentsheader>
 <div class="container" style="background-color: #ffffff; height: 1000px;"> <!-- <ngx-default-content></ngx-default-content> -->
 <div *ngIf="welcome && requestData ==''" id="home" class="container tab-pane active"><br>
 
@@ -8,7 +8,7 @@
 <div *ngIf="welcome && requestData !=''" id="home" class="container tab-pane active"><br>
 
   <ngx-tableheader></ngx-tableheader>
-  <ngx-tablecomponent></ngx-tablecomponent>
+  <ngx-tablecomponent  [tableColum]="myTable"></ngx-tablecomponent>
 
 </div>
 </div>
