--- a/src/app/modules/communication/page/email-log/email-log.component.html
+++ b/src/app/modules/communication/page/email-log/email-log.component.html
@@ -17,6 +17,8 @@
     </nb-tab>
   </nb-tabset>
 
+  <ngx-tableheader></ngx-tableheader>
+
   <ngx-tablecomponent
     [tableColum]="columns"
     [userData]="emails"
