--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -133,7 +133,7 @@ h1{
 
 .main-page-container{
   background-color: white;
-  padding: 30px;
+  padding: 40px;
   height: 100%;
 }
 
@@ -304,4 +304,15 @@ button{
 
 .tabset {
   margin-bottom: 2rem !important;
+}
+
+.detail-text{
+  color: #95A8B8;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
 }
