--- a/src/app/components/radio-button/radio-button.component.html
+++ b/src/app/components/radio-button/radio-button.component.html
@@ -1,5 +1,8 @@
 <div class="col-sm-4">
   <div class="container form-check" *ngFor="let item of items" (click)="clicked(item)">
+    <!-- <div class="my-checkbox" [class]="{selected: item == selected}">
+      <div style="flex: auto; background-color: white; border-radius: 50%;"></div>
+    </div> -->
     <input class="form-check-input" type="radio" name="category" [value]="item" [checked]="item == selected">
     <span class="checkmark"></span>
     <div style="padding: 2px"></div>
