--- a/src/app/modules/communication/page/mail-detail/mail-detail.component.html
+++ b/src/app/modules/communication/page/mail-detail/mail-detail.component.html
@@ -1,10 +1,10 @@
 
 <div class="main-page-container">
     <div style="display: flex;">
-        <div style="flex: auto;">
+        <div style="flex: auto; align-self: center;">
             <h5>{{ email.subject }}</h5>
         </div>
-        <div style="display: flex; padding: 1rem 0rem;">
+        <div style="display: flex; padding: 1rem 0rem; align-self: center;">
             <button nbButton style="background-color: transparent;border:1px solid #b6b3b3" >
                 Export as
             </button>
@@ -15,37 +15,35 @@
         </div>
         
     </div>
-  <div class="row">
-    <div class="col-sm-4">
+  <div style="display: flex;">
+    <div>
       <div style="display: flex">
         <img
           [src]="email.senderImageSrc"
           style="height: 50px; width: 50px; border-radius: 50%"
         />
-        <div style="padding-left: 10px">
+        <div style="padding-left: 10px" class="header6-medium">
           <div>{{ email.senderName }}</div>
-          <div class="complainer-name">
+          <div class="detail-text">
             {{ email.senderMail }}
           </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
-    </div>
-    <div class="col-sm-4">
-      <div></div>
-      <div class="complainer-name" style="text-align: right">
+    <!-- <div style="display: flex;"> -->
+      <!-- <div style="flex: auto;"></div> -->
+        <div style="max-width: 60%; padding: 30px; padding-top: 3rem;" class="header6-normal">{{ email.content }}</div>
+        <!-- <div style="flex: auto;"></div> -->
+  <!-- </div> -->
+    <div>
+      <div style="visibility: hidden;">lll</div>
+      <div class="detail-text" style="text-align: left;">
         <span>{{ email.date_sent | date: "HH:mm" }}</span>
         <span style="margin-left: 20px">{{
             email.date_sent | date: "MMM dd, yyyy"
         }}</span>
       </div>
     </div>
-  </div>
-  <div style="display: flex;">
-      <div style="flex: auto;"></div>
-        <div style="max-width: 60%;" class="header6-normal">{{ email.content }}</div>
-        <div style="flex: auto;"></div>
   </div>
 
 </div>
